--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p> hello dee</p>
+    <br>
+    this is project on group push and pull chkout and branch, merge & approve.
 </body>
 </html>
