changes more on index page from daryl

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <br>
     this is project on group push and pull chkout and branch, merge & approve. 
     change after robert. 
+    make more chnages
+    more changes at 730pm
 </body>
 </html>
