--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Test header</h1>
     <p> hello dee</p>
+    <p> change by scott </p>
     <br>
     this is project on group push and pull chkout and branch, merge & approve. 
     change after robert. 
